// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card with icon 1`] = `
<div
  className="css-1w9w0k"
>
  <div
    className="css-ms1gmv"
  >
    <span
      className="css-lvyu5j"
    >
      <span>
        icon
      </span>
    </span>
    Test title
  </div>
  <div
    className="css-1v1qs4"
  >
    Test Card
  </div>
</div>
`;

exports[`Card Card without container 1`] = `
<div
  className="css-1w9w0k"
>
  <div
    className="css-ms1gmv"
  >
    <span
      className="css-lvyu5j"
    >
      <span>
        icon
      </span>
    </span>
    Test title
  </div>
  Test Card
</div>
`;

exports[`Card Default Card 1`] = `
<div
  className="css-y3qx6d"
>
  <div
    className="css-1v1qs4"
  >
    Test alert
  </div>
</div>
`;

exports[`Card Outline Card 1`] = `
<div
  className="css-1w9w0k"
>
  <div
    className="css-ms1gmv"
  >
    Test title
  </div>
  <div
    className="css-1v1qs4"
  >
    Test Card
  </div>
</div>
`;
